<resources>
    <string name="app_name">testing</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="price_45">$45</string>
    <string name="price_55">$55</string>
    <string name="price_65">$65</string>
    <string name="price_85">$85</string>
    <string name="price_120">$120</string>
    <string name="price_199">$199</string>
    <string name="price_249">$249</string>
    <string name="price_299">$299</string>
    <string name="price_399">$399</string>
    <string-array name="price_range">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
</resources>
